--- a/K2P.config
+++ b/K2P.config
@@ -12,7 +12,7 @@ CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget=y
-CONFIG_PACKAGE_iperf3=y
+#CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
 
 CONFIG_PACKAGE_luci-app-commands=y
@@ -20,10 +20,10 @@ CONFIG_PACKAGE_luci-app-diag-core=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-zerotier=y
+#CONFIG_PACKAGE_luci-app-mwan3=y
+#CONFIG_PACKAGE_luci-app-mwan3helper=y
+#CONFIG_PACKAGE_luci-app-syncdial=y
+#CONFIG_PACKAGE_luci-app-zerotier=y
 
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
@@ -33,6 +33,18 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
+
+#add wireguadr support
+CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
+
+#add adblock support
+CONFIG_PACKAGE_luci-app-adblock=y
+CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
+CONFIG_PACKAGE_adblock=y
 
 #cancel some packages
 # CONFIG_PACKAGE_luci-app-frpc is not set
