--- a/K2P.config
+++ b/K2P.config
@@ -17,7 +17,7 @@ CONFIG_PACKAGE_tcpdump=y
 
 CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-diag-core=y
-CONFIG_PACKAGE_luci-app-ttyd=y
+#CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
 #CONFIG_PACKAGE_luci-app-mwan3=y
@@ -45,6 +45,15 @@ CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
 CONFIG_PACKAGE_adblock=y
+
+add smaba support
+CONFIG_PACKAGE_autosamba=y
+CONFIG_PACKAGE_luci-app-samba=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_samba36-client=y
+CONFIG_PACKAGE_samba36-net=y
+CONFIG_PACKAGE_samba36-server=y
+
 
 #cancel some packages
 # CONFIG_PACKAGE_luci-app-frpc is not set
