--- a/K2P.config
+++ b/K2P.config
@@ -12,7 +12,7 @@ CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_wget=y
-#CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_tcpdump=y
 
 CONFIG_PACKAGE_luci-app-commands=y
@@ -30,9 +30,9 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 
 #add sftp support
-CONFIG_PACKAGE_openssh-sftp-client=y
-CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_luci-app-vsftpd=y
+#CONFIG_PACKAGE_openssh-sftp-client=y
+#CONFIG_PACKAGE_openssh-sftp-server=y
+#CONFIG_PACKAGE_luci-app-vsftpd=y
 
 #add wireguadr support
 CONFIG_PACKAGE_wireguard-tools=y
@@ -49,10 +49,13 @@ CONFIG_PACKAGE_adblock=y
 add smaba support
 CONFIG_PACKAGE_autosamba=y
 CONFIG_PACKAGE_luci-app-samba=y
-#CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_samba36-client=y
 CONFIG_PACKAGE_samba36-net=y
 CONFIG_PACKAGE_samba36-server=y
+CONFIG_PACKAGE_kmod-fs-cifs=y
+CONFIG_PACKAGE_luci-app-cifs-mount=y
+CONFIG_PACKAGE_luci-app-cifsd=y
+CONFIG_PACKAGE_cifsmount=y
 
 
 #cancel some packages
@@ -61,3 +64,9 @@ CONFIG_PACKAGE_samba36-server=y
 # CONFIG_PACKAGE_luci-app-pptp-server is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
+CONFIG_PACKAGE_ddns-scripts is not set
+CONFIG_PACKAGE_ddns-scripts_aliyun is not set
+CONFIG_PACKAGE_ddns-scripts_dnspod is not set
+CONFIG_PACKAGE_luci-app-wol is not set
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn is not set
+CONFIG_PACKAGE_wol is not set
