--- a/K2P.config
+++ b/K2P.config
@@ -49,8 +49,8 @@ CONFIG_PACKAGE_adblock=y
 add smaba support
 CONFIG_PACKAGE_autosamba=y
 CONFIG_PACKAGE_luci-app-samba=y
-CONFIG_PACKAGE_samba36-client=y
-CONFIG_PACKAGE_samba36-net=y
+#CONFIG_PACKAGE_samba36-client=y
+#CONFIG_PACKAGE_samba36-net=y
 CONFIG_PACKAGE_samba36-server=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
