--- a/K2P.config
+++ b/K2P.config
@@ -42,9 +42,9 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 
 #add adblock support
-CONFIG_PACKAGE_luci-app-adblock=y
-CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
-CONFIG_PACKAGE_adblock=y
+#CONFIG_PACKAGE_luci-app-adblock=y
+#CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
+#CONFIG_PACKAGE_adblock=y
 
 add smaba support
 CONFIG_PACKAGE_autosamba=y
