--- a/K2P.config
+++ b/K2P.config
@@ -47,14 +47,14 @@ CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 #CONFIG_PACKAGE_adblock=y
 
 add smaba support
-CONFIG_PACKAGE_autosamba=y
+#CONFIG_PACKAGE_autosamba=y
 CONFIG_PACKAGE_luci-app-samba=y
 #CONFIG_PACKAGE_samba36-client=y
 #CONFIG_PACKAGE_samba36-net=y
 CONFIG_PACKAGE_samba36-server=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
-CONFIG_PACKAGE_luci-app-cifsd=y
+#CONFIG_PACKAGE_luci-app-cifsd=y
 CONFIG_PACKAGE_cifsmount=y
 
 
@@ -70,3 +70,4 @@ CONFIG_PACKAGE_ddns-scripts_dnspod is not set
 CONFIG_PACKAGE_luci-app-wol is not set
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn is not set
 CONFIG_PACKAGE_wol is not set
+CONFIG_PACKAGE_luci-app-vsftpd is not set
